objects/Laser_Ordered_Forms__c.object
<CustomObject>
    <description>Used by Laser group for forms ordered tracking</description>
    <fields>
        <fullName>Catalog_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Number</label>
        <referenceTo>Laser_Ordered_Forms_Catalog_Numbers__c</referenceTo>
        <relationshipLabel>Laser Ordered Forms</relationshipLabel>
        <relationshipName>Laser_Ordered_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditional_A_R_Statement__c</fullName>
        <label>Conditional A/R Statement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Name2__c</fullName>
        <formula>IF(ISBLANK(Catalog_Number__c) &amp;&amp; NOT(ISBLANK(TEXT(Form_Name__c))), TEXT(Form_Name__c), Catalog_Number__r.Description__c)</formula>
        <label>Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <picklist>
            <picklistValues>
                <fullName>A/R Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eShowroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMLR - Rental Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC/AP Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Order Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSDD/FSDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workorder</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Type2__c</fullName>
        <formula>IF(ISBLANK(Catalog_Number__c) &amp;&amp; NOT(ISBLANK(TEXT(Form_Types__c))), TEXT(Form_Types__c), TEXT(Catalog_Number__r.Form_Type__c))</formula>
        <label>Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Types__c</fullName>
        <label>Form Types</label>
        <picklist>
            <controllingField>Form_Name__c</controllingField>
            <picklistValues>
                <fullName>Bar Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP 1-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP 2-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF 1-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF 2-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Type - 1-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Type - 2-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Type - Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Type - Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Type - Type 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Work Order (Type 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laser_Artwork_Order__c</fullName>
        <label>Laser Artwork Order</label>
        <referenceTo>Laser_Artwork_Order__c</referenceTo>
        <relationshipLabel>Laser Ordered Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Laser_Ordered_Forms__c</fullName>
        <label>ePayments Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverRide_Field__c</fullName>
        <description>Field not to be displayed on page layout - for use with conga form only</description>
        <formula>IF(Unit_Price_Override__c &gt;0,  Unit_Price_Override__c ,  Unit_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OverRide_Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client__c</fullName>
        <label>Service Edge Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF(NOT(ISBLANK(Quantity__c)), Quantity__c * IF(AND(NOT(ISBLANK( Unit_Price_Override__c )), Unit_Price_Override__c &gt;= 0), Unit_Price_Override__c, Unit_Price__c), 0)</formula>
        <label>Total$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Override2__c</fullName>
        <formula>Unit_Price__c +  Unit_Price_Override__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Override__c</fullName>
        <description>We need to implement a way of overriding the default price. There are specific clients that have discounted rates or receive changes free, as well as any contracted lines (which we collect from the contract)</description>
        <label>Unit Price (Override)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Total__c</fullName>
        <formula>Quantity__c  *  Unit_Price_Override2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price Total Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>IF(NOT(ISBLANK(Laser_Artwork_Order__r.Ship_CMF_Business_Unit__c)) &amp;&amp; CONTAINS(Laser_Artwork_Order__r.Ship_CMF_Business_Unit__c, &quot;CANADA&quot;), Catalog_Number__r.CAN__c, Catalog_Number__r.US__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Conditional_A_R_Statement__c</fullName>
        <formula>AND(Catalog_Number__r.Conditional_A_R_Statement__c=TRUE,Laser_Artwork_Order__r.Ship_CMF_Info__r.Conditional_A_R_Statement__c=TRUE)</formula>
        <label>Update Conditional A/R Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Service_Edge__c</fullName>
        <formula>AND(Catalog_Number__r.Service_Edge_Notification_Flag__c=TRUE, Laser_Artwork_Order__r.Ship_CMF_Info__r.Service_Edge_Client__c=TRUE)</formula>
        <label>Update Service Edge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_ePayments__c</fullName>
        <formula>AND(Catalog_Number__r.ePayments_Notification_Flag__c=TRUE,Laser_Artwork_Order__r.Ship_CMF_Info__r.ePayments_Client__c=TRUE)</formula>
        <label>Update ePayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_eSignature__c</fullName>
        <formula>AND(Catalog_Number__r.eSignature_Notification_Flag__c=TRUE,Laser_Artwork_Order__r.Ship_CMF_Info__r.eSignature_Client__c=TRUE)</formula>
        <label>Update eSignature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSignature__c</fullName>
        <label>eSignature Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Laser Ordered Forms</label>
    <nameField>
        <displayFormat>LOF-{00000}</displayFormat>
        <label>Ordered Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laser Ordered Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>